--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular": "^1.5.9",
     "angular-route": "^1.5.9",
     "angular-material": "^1.1.1",
-    "angular-cookies": "^1.5.9"
+    "angular-cookies": "^1.5.9",
+    "jquery": "^3.1.1"
   }
 }
